Waving Hand Crowd

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -76,9 +77,21 @@
 		</div>
 	</div>
 	<!-- 6TH AREA -->
-	<div class ="container-fluid sixArea">		
-	</div>
+	<div class ="container-fluid sixArea">
+		<img class="finalLemonStand" src="images/finalLemonadeStand.png" alt="TEMP">
+		
+		<div class="crowdContainer">
+			<!--<img class="custCrowd" id="handCrowd0" src="images/hand_Crowd2_0.png" alt="TEMP">
+			<img class="custCrowd" id="handCrowd1" src="images/hand_Crowd2_1.png" alt="TEMP">-->
 
+			<img class="custCrowd" id="handCrowd0" src="images/hand_Crowd_0.png" alt="TEMP">
+			<img class="custCrowd" id="handCrowd1" src="images/hand_Crowd_1.png" alt="TEMP">
+		</div>	
+	</div>
+	<!-- FOOTER -->
+	<footer>
+		<h2>VOID</h2>
+	</footer>
 	<!--Script Links-->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/app.js"></script>
