Hand Crowd Screen Size Adjustment Fix

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 <body>
 	<!-- 1ST AREA -->
 	<div class ="container-fluid firstArea">
+		<!--Main Title-->
+		<div class="titlebox">
+			<h1 class="mainHeader">You're Business and You</h1>
+		</div>
 		<!--Moving Clouds-->
 		<img class="cloud0" src="images/cloudMove_0.png" alt="TEMP">
 		<img class="cloud1" src="images/cloudMove_1.png" alt="TEMP">
 		<img class="cloud2" src="images/cloudMove_2.png" alt="TEMP">
 	</div>
-
 	<!-- 2ND AREA -->
 	<div class ="container-fluid secondArea">
 		<div class="container">
@@ -90,7 +93,7 @@
 	</div>
 	<!-- FOOTER -->
 	<footer>
-		<h2>VOID</h2>
+		<!--<h2>VOID</h2>-->
 	</footer>
 	<!--Script Links-->
 	<script src="js/jquery.min.js"></script>
