Mobile version mostly finished

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 	-->
 </head>
 <body>
+	<!-- XS 1ST AREA-->
+	<div class="visible-xs container-fluid firstAreaXs">
+		<div class="titlebox col-xs-10 col-xs-offset-1">
+			<h1 class="mainHeader">You're Business and You</h1>
+		</div>
+		<img class="xsLemonStand col-xs-12" src="images/xs/section1_lemonadeStand_ng.png" alt="TEMP">
+	</div>
 	<!-- 1ST AREA -->
-	<div class ="container-fluid firstArea">
+	<div class="container-fluid firstArea hidden-xs">
 		<!--Main Title-->
 		<div class="titlebox">
 			<h1 class="mainHeader">You're Business and You</h1>
@@ -23,22 +30,41 @@
 		<img class="cloud1" src="images/cloudMove_1.png" alt="TEMP">
 		<img class="cloud2" src="images/cloudMove_2.png" alt="TEMP">
 	</div>
+	
+	<!-- XS 2ND AREA-->
+	<div class="visible-xs container-fluid secondAreaXs">
+		<h1 class="xsDarkinfo">Most Business aren't ready</h1>
+		<img class="col-xs-10 col-xs-offset-1 xsDonkey" src="images/childDonkeyPhone.png" alt="TEMP">
+		<p class="col-xs-12 xsDarkp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+	</div>
 	<!-- 2ND AREA -->
-	<div class ="container-fluid secondArea">
+	<div class ="container-fluid secondArea hidden-xs">
 		<div class="container">
 			<!--Content Row 2-->
 			<div class="row">		
 				<img class="col-sm-6 donkeyChar" src="images/childDonkeyPhone.png" alt="TEMP">
 				<div class="info2 col-sm-6">
 					<h1>Most Business aren't ready</h1>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+					<!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>-->
+					<p>Business isn't what it used to be. Gone are the telegrams and town crierers. You take a page in the local paper to no avail, broadcasts might as well send static and radio? Nobody has touched that dial in years. You want to connect but the lines are dead. How to reach out?</p>
 				</div>
 			</div>
 		</div>
 	</div>
 
+
+	<!-- XS 3RD AREA-->
+	<div class="visible-xs container-fluid thirdAreaXspt1">
+		<div class="col-xs-10 col-xs-offset-1 thirdHeaderXs">
+			<h1>The Tech is Ready Now</h1>
+		</div>		
+		<img class="col-xs-8 col-xs-offset-2" src="images/xs/section3_socialAnimals.png" alt="TEMP">
+	</div>
+	<div class="visible-xs container-fluid thirdAreaXspt2">
+		<p class="col-xs-12 xsDarkp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+	</div>
 	<!-- 3RD AREA -->
-	<div class ="container-fluid thirdArea">
+	<div class ="container-fluid thirdArea hidden-xs">
 		<div class="container">
 			<!--Content Row 3-->
 			<div class="row">
@@ -51,8 +77,14 @@
 		</div>	
 	</div>
 
+	<!-- XS 4TH AREA-->
+	<div class="visible-xs container-fluid fourthAreaXs">
+		<h1 class="col-xs-10 col-xs-offset-1">Your Competition is using it and they will destory you</h1>
+		<img class="col-xs-10 col-xs-offset-1" src="images/xs/section4_ufo.png" alt="TEMP">
+		<p class="col-xs-12">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	</div>
 	<!-- 4TH AREA -->
-	<div class ="container-fluid fourthArea">
+	<div class ="container-fluid fourthArea hidden-xs">
 		<div class="container">
 			<!--Content Row 4-->
 			<div class="row">
@@ -66,8 +98,16 @@
 		</div>		
 	</div>
 
+	<!-- XS 5TH AREA-->
+	<div class="visible-xs container-fluid fiveAreaXs">
+		<div class="col-xs-10 col-xs-offset-1 fiveHeader">
+			<h1>We're here to help</h1>
+		</div>	
+		<img class="col-xs-10 col-xs-offset-1" src="images/darkLemonadeStand.png" alt="TEMP">
+		<p class="col-xs-12">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+	</div>
 	<!-- 5TH AREA -->
-	<div class ="container-fluid fiveArea">
+	<div class ="container-fluid fiveArea hidden-xs">
 		<div class="container">
 			<!--Content Row 5-->
 			<div class="row">
@@ -80,20 +120,16 @@
 		</div>
 	</div>
 	<!-- 6TH AREA -->
-	<div class ="container-fluid sixArea">
+	<div class ="container-fluid sixArea hidden-xs">
 		<img class="finalLemonStand" src="images/finalLemonadeStand.png" alt="TEMP">
 		
 		<div class="crowdContainer">
-			<!--<img class="custCrowd" id="handCrowd0" src="images/hand_Crowd2_0.png" alt="TEMP">
-			<img class="custCrowd" id="handCrowd1" src="images/hand_Crowd2_1.png" alt="TEMP">-->
-
 			<img class="custCrowd" id="handCrowd0" src="images/hand_Crowd_0.png" alt="TEMP">
 			<img class="custCrowd" id="handCrowd1" src="images/hand_Crowd_1.png" alt="TEMP">
 		</div>	
 	</div>
 	<!-- FOOTER -->
 	<footer>
-		<!--<h2>VOID</h2>-->
 	</footer>
 	<!--Script Links-->
 	<script src="js/jquery.min.js"></script>
