--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>FPO//Nectr Infographics</title>
+	<title>Nectr Infographics</title>
 	<!-- css links -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -35,7 +35,7 @@
 	<div class="visible-xs container-fluid secondAreaXs">
 		<h1 class="xsDarkinfo">Most Business aren't ready</h1>
 		<img class="col-xs-10 col-xs-offset-1 xsDonkey" src="images/childDonkeyPhone.png" alt="TEMP">
-		<p class="col-xs-12 xsDarkp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+		<p class="col-xs-12 xsDarkp">Business isn't what it used to be. Gone are the telegrams and town criers. You take a page in the local paper to no avail, broadcasts might as well send static and radio? Nobody has touched that dial in years. You want to connect but the lines are dead. How to reach out?</p>
 	</div>
 	<!-- 2ND AREA -->
 	<div class ="container-fluid secondArea hidden-xs">
@@ -45,8 +45,7 @@
 				<img class="col-sm-6 donkeyChar" src="images/childDonkeyPhone.png" alt="TEMP">
 				<div class="info2 col-sm-6">
 					<h1>Most Business aren't ready</h1>
-					<!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>-->
-					<p>Business isn't what it used to be. Gone are the telegrams and town crierers. You take a page in the local paper to no avail, broadcasts might as well send static and radio? Nobody has touched that dial in years. You want to connect but the lines are dead. How to reach out?</p>
+					<p>Business isn't what it used to be. Gone are the telegrams and town criers. You take a page in the local paper to no avail, broadcasts might as well send static and radio? Nobody has touched that dial in years. You want to connect but the lines are dead. How to reach out?</p>
 				</div>
 			</div>
 		</div>
@@ -61,7 +60,7 @@
 		<img class="col-xs-8 col-xs-offset-2" src="images/xs/section3_socialAnimals.png" alt="TEMP">
 	</div>
 	<div class="visible-xs container-fluid thirdAreaXspt2">
-		<p class="col-xs-12 xsDarkp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+		<p class="col-xs-12 xsDarkp">You may have stayed still but time has moved forward at a blinding speed, lightspeed actually. Facebook, Twitter, Google Glass even Fitbit, people are sharing things you've never even thought to share in ways you haven't even heard of.</p>
 	</div>
 	<!-- 3RD AREA -->
 	<div class ="container-fluid thirdArea hidden-xs">
@@ -70,7 +69,7 @@
 			<div class="row">
 				<div class="info3 col-sm-4">
 					<h1>The Tech is Ready Now</h1>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+					<p>You may have stayed still but time has moved forward at a blinding speed, lightspeed actually. Facebook, Twitter, Google Glass even Fitbit, people are sharing things you've never even thought to share in ways you haven't even heard of.</p>
 				</div>
 				<img class="col-sm-8 connectedChars" src="images/connectedCharacters.png" alt="TEMP">
 			</div>
@@ -81,7 +80,7 @@
 	<div class="visible-xs container-fluid fourthAreaXs">
 		<h1 class="col-xs-10 col-xs-offset-1">Your Competition is using it and they will destory you</h1>
 		<img class="col-xs-10 col-xs-offset-1" src="images/xs/section4_ufo.png" alt="TEMP">
-		<p class="col-xs-12">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		<p class="col-xs-12">But is it a fad? After all what are the Jones up to? Chain stores such as Target and Best Buy have long been wise to changing habits of consumers. Just last year Target spent an estimated 170 million for the Christmas Season alone with the majority spent on digital outreach. Between multiple social media presence, online storefronts and databanks filled with customer spending records and habits customers that you never thought you could get are being stolen in ways you've never thought possible.</p>
 	</div>
 	<!-- 4TH AREA -->
 	<div class ="container-fluid fourthArea hidden-xs">
@@ -92,7 +91,7 @@
 				<!-- col-sm-offset-1-->
 				<div class="info4 col-sm-6 col-sm-offset-1">
 						<h1>Your Competition is using it and they will destory you</h1>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+						<p>But is it a fad? After all what are the Jones up to? Chain stores such as Target and Best Buy have long been wise to changing habits of consumers. Just last year Target spent an estimated 170 million for the Christmas Season alone with the majority spent on digital outreach. Between multiple social media presence, online storefronts and databanks filled with customer spending records and habits customers that you never thought you could get are being stolen in ways you've never thought possible.</p>
 				</div>
 			</div>
 		</div>		
@@ -104,7 +103,7 @@
 			<h1>We're here to help</h1>
 		</div>	
 		<img class="col-xs-10 col-xs-offset-1" src="images/darkLemonadeStand.png" alt="TEMP">
-		<p class="col-xs-12">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+		<p class="col-xs-12">Wow, heavy. Take a moment, pour yourself a glass and relax, we can help. You might not have the bucks but you can certainly deliver a bang, but how? With Nectr that's how. A combination between a social network for business and customer loyalty program. With this technology the barrier to entry is low, the rewards are high and the customers endless. So give us a call, what can you gain?</p>
 	</div>
 	<!-- 5TH AREA -->
 	<div class ="container-fluid fiveArea hidden-xs">
@@ -113,7 +112,7 @@
 			<div class="row">
 				<div class="info5 col-sm-6">
 						<h1>We're here to help</h1>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p>Wow, heavy. Take a moment, pour yourself a glass and relax, we can help. You might not have the bucks but you can certainly deliver a bang, but how? With Nectr that's how. A combination between a social network for business and customer loyalty program. With this technology the barrier to entry is low, the rewards are high and the customers endless. So give us a call, what can you gain?</p>
 				</div>
 				<img class="col-sm-5 col-sm-offset-1 darkLemon" src="images/darkLemonadeStand.png" alt="TEMP">
 			</div>
